--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <head>
 
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <script src="js/javascript.js"></script>
     <title>Lo Mejor De Lo Mejor</title>
 
@@ -22,9 +22,11 @@
     <a class="boton" href="http://laweb.com" target="_blank">ALTAS Y BAJAS</a>
     <a class="boton" href="http://laweb.com" target="_blank">AGENDA TV</a>
     <a class="boton" href="http://laweb.com" target="_blank">MAS INFORMACION</a>
-    
+    <p><i class="fa fa-check-circle verde"></i> Me gusta</p>
+    <p><i class="fa fa-times-circle rojo"></i> No me gusta</p>
 
 
+ <p>BIENVENIDOS A NUESTRA PAGINA OFICIAL DE DEPORTES CON LOS MEJORES EQUIPOS SIEMPRE AL DÍA</p>
 
   </head>
 
@@ -36,7 +38,7 @@
 
     </div>
 
-    <p>Andrés Felipe Charry</p>
+    <p>ANDRES FELIPE CHARRY</p>
 
   </body>
 
